WAC-60- Fix image in insight-rect overflow

--- a/ckanext/who_afro/assets/css/who-afro.css
+++ b/ckanext/who_afro/assets/css/who-afro.css
@@ -812,13 +812,15 @@ p.small {
 }
 
 .insight-img-container img {
-    width: 100%;
-    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
     object-fit: cover;
 }
 
 .insight-rect img {
     object-fit: cover;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .insight-rect {
